Fix header missalignment in free version

--- a/_src/scss/modules/_admin.scss
+++ b/_src/scss/modules/_admin.scss
@@ -52,6 +52,10 @@
 			margin-bottom: 30px;
 		}
 
+		#sui-cross-sell-footer h3 {
+			text-align: center;
+		}
+
 		// Bulk Smush error messages: Start.
 		.smush-final-log {
 
